# krunner-symbols

./: .gitignore  CMakeLists.txt  INSTALL  PKGBUILD  README.md  Unicode_TermsOfUse  build_and_install.sh  get_unicode_tables.sh  install.sh  krunner-symbols  krunner-symbols-full-unicode-index  krunner-symbols-unicode-index  krunner-symbolsrc  package.sh  plasma-runner-symbols.desktop  postinst  postrm  restart-krunner.sh  symbols.conf  symbols.cpp  symbols.h  symbols.json  uninstall.sh  update-unicode-index.sh
krunner-symbols-unicode/: unicode_en
